--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "ext-iconv": "*",
         "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
+        "symfony/css-selector": "5.2.*",
         "symfony/dom-crawler": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "config": {
