--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,6 @@
         "ext-iconv": "*",
         "symfony/browser-kit": "5.2.*",
         "symfony/console": "5.2.*",
-        "symfony/css-selector": "5.2.*",
-        "symfony/dom-crawler": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
@@ -59,5 +57,8 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/phpunit-bridge": "^5.2"
     }
 }
